browserless-chrome/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: browserless-chrome
  namespace: browserless-chrome
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/proxy-set-header-upgrade: "$http_upgrade"
    nginx.ingress.kubernetes.io/proxy-set-header-connection: "upgrade"
    nginx.ingress.kubernetes.io/proxy-set-header-host: "$host"
    nginx.ingress.kubernetes.io/proxy-cache-bypass: "$http_upgrade"
spec:
  tls:
    - hosts:
        - browserless-chrome.live.k8s.phl.io
      secretName: browserless-chrome-tls
  rules:
    - host: browserless-chrome.live.k8s.phl.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: browserless-chrome
                port:
                  number: 80
